<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmps115.trades.EditMyProfile">


    <Button
        android:id="@+id/imageSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Image"
        android:textSize="10sp"
        android:onClick="btnClick"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp"
        android:layout_alignBottom="@+id/image"
        android:layout_toLeftOf="@+id/image" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="102dp"
        android:layout_height="95dp"
        android:src = "@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginRight="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="First"
        android:layout_below="@+id/imageSubmit"
        android:layout_alignLeft="@+id/imageSubmit"
        android:layout_alignStart="@+id/imageSubmit"
        android:layout_toLeftOf="@+id/image"
        android:layout_alignRight="@+id/imageSubmit"
        android:layout_alignEnd="@+id/imageSubmit" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image"
        android:layout_alignStart="@+id/image"
        android:layout_alignTop="@+id/firstName"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Last"
        android:layout_alignRight="@+id/image"
        android:layout_alignEnd="@+id/image" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Email"
        android:layout_alignRight="@+id/lastName"
        android:layout_alignEnd="@+id/lastName" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="25dp"
        android:hint="Phone #"
        android:ems="10"
        android:inputType="phone"
        android:layout_alignRight="@+id/email"
        android:layout_alignEnd="@+id/email" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone"
        android:layout_alignRight="@+id/phone"
        android:layout_below="@+id/phone"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginTop="44dp"
        android:text="Save Profile" />


</RelativeLayout>
